# duroxide

./: .gitignore  CHANGELOG.md  CODEBASE_EVALUATION.md  CODE_REVIEW_EVALUATION.md  CODE_REVIEW_SUMMARY.md  CONTRIBUTING.md  CRITICAL_FIX_IMPLEMENTATION.md  CURRENT-STATUS.md  Cargo.toml  EVALUATION_SUMMARY.md  FINAL-IMPLEMENTATION-STATUS.md  FINAL-IMPLEMENTATION-SUMMARY.md  FINAL-RESULTS.md  FINAL-STATUS.md  IDIOMATIC_RUST_ANALYSIS.md  IMPLEMENTATION-CHECKPOINT.md  IMPLEMENTATION-COMPLETE-FINAL.md  IMPLEMENTATION-COMPLETE.md  IMPLEMENTATION-FINAL-CLEAN.md  IMPLEMENTATION-SESSION-SUMMARY.md  IMPLEMENTATION-STATUS.md  IMPLEMENTATION-SUCCESS.md  IMPLEMENTATION_SUMMARY.md  OBSERVABILITY-SUMMARY.md  PHASE1-COMPLETE.md  PHASE1_COMPLETE.md  PRESENTATION.md  PROGRESS-UPDATE.md  PROVIDER-CLEANUP-DONE.md  PROVIDER_ID_GENERATION_ANALYSIS.md  QUICK_START.md  README.md  RELEASE_NOTES.md  SESSION-FINAL-STATUS.md  SESSION-PROGRESS.md  SESSION-SUMMARY.md  SOUNDNESS_ANALYSIS.md  SOUNDNESS_FIXES.md  STRESS_TEST_MONITORING.md  TEST-COMPARISON.md  (+18 more)
.cargo/: config.toml
.github/: copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: orchestration-registry.md
.github/workflows/: CI.yml  ci.yml  rust.yml
ai_prompts/: README.md  duroxide-add-feature.md  duroxide-add-test.md  duroxide-clean-warnings.md  duroxide-merge-main.md  duroxide-update-docs.md
apps/hello-cli/: Cargo.toml
docs/: DETERMINISTIC-PATTERNS.md  ORCHESTRATION-GUIDE.md  README.md  TOYGRES-FEEDBACK-FIXES.md  active-instances-and-gating.md  activity-context-design.md  api.md  architecture.md  code-coverage-guide.md  concepts.md  consistency-guidelines.md  continue-as-new.md  cross-crate-registry-pattern.md  design-invariants.md  dtf-runtime-design.md  durable-futures-internals.md  durable-tasks-samples-enumeration.md  duroxide-active-orchestrations-metric-spec.md  duroxide-telemetry-spec.md  event-schema-evolution.md  execution-model.md  external-event-queue-semantics.md  external-events.md  instance-creation-changes-summary.md  library-observability.md  long-polling-behavior-plan.md  management-api-improvements-proposal.md  metrics-specification.md  migration-guide.md  multi-execution-atomic-alternative.md  multi-execution-atomic-proposal.md  observability-guide.md  observability-implementation-status.md  orchestration-registry.md  orchestration-visualization.md  patterns.md  persistence-failure-analysis.md  polling-and-execution-model.md  postgresql-provider-plan.md  provider-atomic-refactor-plan.md  (+30 more)
docs/analysis/: provider-abstraction-leaks.md  provider-interface-minimization.md  provider-leaks-summary.txt
docs/features/: runtime-options.md
docs/learning/: README.md  hello-world.md  (+2 more)
dtf-data/: inst-hello-cli-1.jsonl
duroxide-macros/: Cargo.toml  README.md
duroxide-macros/src/: lib.rs
duroxide-macros/tests/: macro_tests.rs
examples/: README.md  custom_provider_stress_test.rs  delays_and_timeouts.rs  fan_out_fan_in.rs  hello_world.rs  hello_world_duroxide_main.rs  hello_world_lower_level.rs  hello_world_macros.rs  idle_runtime_footprint.rs  low_level_api.rs  macro_demo.rs  macro_workflow.rs  memory_baseline.rs  memory_optimize.rs  metrics_cli.rs  minimal_test.rs  otel-collector-config.yaml  registry_discovery.rs  sqlite_persistence.rs  timers_and_events.rs  trace_async_example.rs  with_observability.rs
migrations/: 20240101000000_initial_schema.sql  20240102000000_add_attempt_count.sql  20240103000000_add_worker_visible_at.sql  20240104000000_add_worker_activity_identity.sql  20240105000000_add_parent_instance_id.sql  20240106000000_add_pinned_version.sql  20240107000000_add_sessions.sql  20240108000000_add_custom_status.sql
profiling/: .dockerignore  Dockerfile  README.md  RESULTS.md  benchmark-idle.sh  compare-memory.sh  docker-compose.yml
profiling/pg-memory-test/: Cargo.toml
profiling/pg-memory-test/src/: main.rs
prompts/: README.md  duroxide-crate-release.md  duroxide-create-scenario-test.md  duroxide-fix-bug.md  duroxide-merge-main.md  duroxide-profile.md  duroxide-refactor.md  duroxide-stress-test.md  duroxide-update-docs-tests.md
proposals/: activity-cancellation-lock-stealing.md  activity-cancellation-queue-flag.md  activity-cancellation.md  activity-retry-policy.md  auto-pruning.md  core-improvements-roadmap.md  event-schema-redesign.md  macro-system-design.md  management-api-deletion.md  management-interface-extension.md  metrics-facade-migration.md  orchestration-instance-caching.md  poison-message-handling.md  provider-improvements.md  replay-simplification-PROGRESS.md  replay-simplification.md  slatedb-provider-design.md  standard-async-futures.md  system-call-redesign-spec.md  timer-queue-removal-plan.md  toygres-improvements.md  unregistered-orchestration-backoff.md
sqlite-stress/: Cargo.toml  README.md  track-results.sh
src/: auto_registry.rs  futures.rs  futures_v2.rs  lib.rs  logging.rs  main.rs  prelude.rs  provider_correctness_tests.rs  provider_stress_tests.rs  provider_validations.rs
stress-tests/: Cargo.toml  README.md  track-results.sh
stress-tests/src/: lib.rs  parallel_orchestrations.rs
tests/: TEST_SPEC.md  activity_routing_tests.rs  async_block_tests.rs  bulk_deletion_integration_tests.rs  cancellation_tests.rs  capability_discovery_test.rs  capability_filtering_tests.rs  concurrency_tests.rs  continue_as_new_chain_stress.rs  continue_as_new_mini_stress.rs  continue_as_new_tests.rs  custom_status_tests.rs  deletion_integration_tests.rs  determinism_tests.rs  dispatcher_queues_fs.rs  e2e_cancellation.rs  e2e_completion_kind_mismatch.rs  e2e_concurrency.rs  e2e_continue_as_new.rs  e2e_determinism.rs  e2e_errors.rs  e2e_execution_id_validation.rs  e2e_nondet_code_swap.rs  e2e_nondeterminism.rs  e2e_races.rs  e2e_recovery.rs  e2e_reliability_crash_windows.rs  e2e_reliability_peek_lock.rs  e2e_samples.rs  e2e_samples_macros.rs  e2e_samples_sqlite.rs  e2e_sqlite_basic.rs  e2e_tests.rs  e2e_unknown_activity.rs  e2e_unknown_orchestration.rs  e2e_versioning_api_surface.rs  e2e_versioning_e2e.rs  e2e_versioning_registry.rs  errors_tests.rs  futures_tests.rs  (+53 more)
(+198 files in other folders)
