[package]
name = "duroxide"
version = "0.1.0"
edition = "2024"
description = "Deterministic task orchestration framework for Rust - inspired by Durable Task Framework"
license = "MIT"
repository = "https://github.com/affandar/duroxide"
homepage = "https://github.com/affandar/duroxide"
documentation = "https://docs.rs/duroxide"
readme = "README.md"
keywords = ["durable", "execution", "workflow", "orchestration", "deterministic", "replay", "async", "tasks"]
categories = ["asynchronous", "concurrency", "workflow", "durable"]

[dependencies]
tokio = { version = "1", features = ["full"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
async-trait = "0.1"
tracing = { version = "0.1", features = ["std"] }
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tempfile = "3"
semver = "1"
uuid = { version = "1", features = ["v4"] }

# SQLite support
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "macros", "migrate", "chrono"] }

# Ensure SQLite is bundled
[dependencies.libsqlite3-sys]
version = "0.27"
features = ["bundled"]

[workspace]
members = [
    ".",
]
