[package]
name = "duroxide"
version = "0.1.0"
edition = "2024"
description = "Deterministic task orchestration framework for Rust - inspired by Durable Task Framework"
license = "MIT"
repository = "https://github.com/affandar/duroxide"
homepage = "https://github.com/affandar/duroxide"
documentation = "https://docs.rs/duroxide"
readme = "README.md"
keywords = ["durable", "execution", "workflow", "orchestration", "deterministic", "replay", "async", "tasks"]
categories = ["asynchronous", "concurrency", "workflow", "durable"]

[dependencies]
tokio = { version = "1", features = ["full"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
tracing = { version = "0.1", features = ["std"] }
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
semver = "1"

# SQLite support
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "macros", "migrate", "chrono"] }
libsqlite3-sys = { version = "0.28", features = ["bundled"] }

# Macro support (optional)
duroxide-macros = { path = "./duroxide-macros", optional = true }
linkme = { version = "0.3", optional = true }

[features]
default = []
macros = ["duroxide-macros", "linkme"]

[dev-dependencies]
# Used in tests/examples
tempfile = "3"

[workspace]
members = [
    ".",
    "duroxide-macros",
]
