[package]
name = "duroxide"
version = "0.1.0"
edition = "2024"
description = "Deterministic task orchestration framework for Rust - inspired by Durable Task Framework"
license = "MIT"
repository = "https://github.com/affandar/duroxide"
homepage = "https://github.com/affandar/duroxide"
documentation = "https://docs.rs/duroxide"
readme = "README.md"
keywords = ["durable", "workflow", "orchestration", "async", "tasks"]
categories = ["asynchronous", "concurrency"]

[features]
default = []
provider-test = []  # Enable all provider testing infrastructure (stress tests + correctness tests)
test = ["provider-test"]  # Auto-enable provider-test for tests (internal use only)
observability = ["opentelemetry", "opentelemetry_sdk", "opentelemetry-otlp"]

[dependencies]
tokio = { version = "1", features = ["full"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
tracing = { version = "0.1", features = ["std"] }
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "json"] }
semver = "1"

# OpenTelemetry observability (optional)
opentelemetry = { version = "0.27", optional = true }
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"], optional = true }
opentelemetry-otlp = { version = "0.27", features = ["grpc-tonic"], optional = true }

# SQLite support
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "macros", "migrate", "chrono"] }

# Ensure SQLite is bundled
[dependencies.libsqlite3-sys]
version = "0.28"
features = ["bundled"]

[dev-dependencies]
# Used in tests/examples
tempfile = "3"
proptest = "1.4"

[workspace]
members = [
    ".",
    "sqlite-stress",
]

# Clippy lints for better code quality
[lints.clippy]
# Correctness (warn for now, can upgrade to deny after fixing)
unwrap_used = "warn"
expect_used = "warn"

# Performance
clone_on_ref_ptr = "warn"
large_enum_variant = "warn"

# Style and maintainability
missing_errors_doc = "warn"
