[package]
name = "duroxide-stress-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
duroxide = { path = ".." }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[[bin]]
name = "parallel_orchestrations"
path = "src/parallel_orchestrations.rs"

